--- a/feeproject.css
+++ b/feeproject.css
@@ -14,10 +14,10 @@
 }
 body{
     line-height: 1.4;
-    color: var(--light);
+    color: var(--dark);
 }
 img{
-    width: 90%;
+    width: 100%;
     display: block;
 }
 .container{
